# GLYPH

./: .gitignore  ARCHIVE_README.md  README.md  README_EVALS.md  README_V2.md  analyze_dataset.py  filter_dataset.py  generate.py  generate_hf_inline.py  requirements-train.txt  reward_golden_tests.py  rl_train.py  train.py
.runpod-cli/: pyvenv.cfg
GLYPH_SFT_V3_RESULTS/: baseline_model_config.json  baseline_train_events.out.tfevents  eval_formal_125.json  eval_loss.csv  eval_runtime.csv  eval_samples_per_second.csv  eval_steps_per_second.csv  eval_test_loss.json  scalar_summary.json  train_epoch.csv  train_grad_norm.csv  train_learning_rate.csv  train_loss.csv
agent_runtime/: __init__.py  chatml.py  protocol.py
blog/: blog.md  blog_copy.md  blog_copy_copy.md  finalized_blog.md  finalized_blogv3.md  gen_chart.py  gen_examples.py  gen_training_curves.py  glyph_sft.md  glyph_tool_turn_sft.md  index.html  make_figures.py  render_html.py  sft_tutorial.md  sft_v1.md
data/: analyze_dataset.py  build.sh  build_bootstrap.py  build_continuation.py  filter_dataset.py  generate.py  patch_dataset.py
docs/: ablation.md  agent_trace.md  def.md  glyph.md
environments/glyph/: README.md  pyproject.toml
environments/glyph/glyph/: task_trace.py
glyph_sft_v2_results/: eval_formal_100.json  eval_test_loss.json  trainer_state_checkpoint_100.json  trainer_state_checkpoint_250.json
results/: eval_formal_post_eval_flatroots.json
review/: CLAIMS_AUDIT.md  REVIEW_DOSSIER.md  pending_doc_corrections.patch  proposed_doc_corrections_v2.patch
rl/: README.md  RLVR_NOTES.md  reward.py  (+13 more)
(+881 files in other folders)
