[project]
name = "glyph"
description = "Verifiable-reward RL environment for a Rust tool-use coding agent: real cargo execution, strict valid_trace metric."
version = "0.1.1"
requires-python = ">=3.10"
tags = ["rust", "tool-use", "coding-agent", "multi-turn", "verifiable-reward"]
dependencies = [
    "verifiers>=0.1.8",
    "datasets",
    "huggingface_hub",
]

[project.urls]
Repository = "https://github.com/JayZenith/GLYPH"
Writeup = "https://jayzenith.github.io/GLYPH/"
CratesDataset = "https://huggingface.co/datasets/JayZenith/glyph-crates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["glyph/**", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 5
